sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: '<-' expected but ')' found.
  for(k<1 to getValueCount()){
                            ^AlgBubbleSort1:8: error: illegal start of simple expression
} 
^